js/js.translator/testData/incremental/invalidation/inlineFunSameLibAddFile/lib1/helper.1.kt
inline fun tweak(c: C) = apply { c.x = 45 }
